[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme_trello_default.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/font_bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/CardExpandable.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/ListPreview.gd" type="Script" id=4]
[ext_resource path="res://assets/style_panel_list_dragged.tres" type="StyleBox" id=5]

[node name="List" type="PanelContainer"]
margin_right = 280.0
margin_bottom = 160.0
rect_min_size = Vector2( 280, 0 )
rect_rotation = 3.5
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 280.0
margin_bottom = 160.0
rect_min_size = Vector2( 240, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerticalContent" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListNameLabel" type="Label" parent="Panel/MarginContainer/VerticalContent"]
margin_right = 264.0
margin_bottom = 25.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "List Name"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VerticalContent"]
margin_top = 29.0
margin_right = 264.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="CardsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VerticalContent/ScrollContainer"]
margin_right = 264.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="Card" parent="Panel/MarginContainer/VerticalContent/ScrollContainer/CardsContainer" instance=ExtResource( 3 )]
margin_right = 264.0
margin_bottom = 46.0

[node name="CardContent" parent="Panel/MarginContainer/VerticalContent/ScrollContainer/CardsContainer/Card" index="0"]
margin_right = 262.0
margin_bottom = 46.0

[node name="InnerPadding" parent="Panel/MarginContainer/VerticalContent/ScrollContainer/CardsContainer/Card/CardContent" index="0"]
margin_right = 260.0
margin_bottom = 41.0

[node name="HBoxContainer" parent="Panel/MarginContainer/VerticalContent/ScrollContainer/CardsContainer/Card/CardContent/InnerPadding" index="0"]
margin_right = 252.0
margin_bottom = 33.0

[node name="Title" parent="Panel/MarginContainer/VerticalContent/ScrollContainer/CardsContainer/Card/CardContent/InnerPadding/HBoxContainer" index="0"]
margin_right = 222.0
margin_bottom = 25.0

[node name="EditIcon" parent="Panel/MarginContainer/VerticalContent/ScrollContainer/CardsContainer/Card/CardContent/InnerPadding/HBoxContainer" index="2"]
margin_left = 226.0
margin_right = 244.0
margin_bottom = 25.0

[editable path="Panel/MarginContainer/VerticalContent/ScrollContainer/CardsContainer/Card"]
